<resources>
    <string name="app_name">Notification Scheduler</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">Wifi</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Jobs</string>
    <string name="network_req">Network Type Required:</string>
    <string name="requires">Requires: </string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="not_set">Not Set</string>
    <string name="override_deadline">Override Deadline: </string>
</resources>