<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/network_req"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/networkOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/noNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/none" />

        <RadioButton
            android:id="@+id/anyNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/any" />

        <RadioButton
            android:id="@+id/wifiNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/requires"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/idleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_idle" />

        <Switch
            android:id="@+id/chargingSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_charging" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/override_deadline"
            android:id="@+id/seekBarLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_set"
            android:id="@+id/seekBarProgress"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_margin="4dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:onClick="scheduleJob"
        android:text="@string/schedule_job" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:onClick="cancelJobs"
        android:text="@string/cancel_jobs" />

</LinearLayout>